--- a/notebooks/TestNeighborhoodAppending.ipynb
+++ b/notebooks/TestNeighborhoodAppending.ipynb
@@ -915,9 +915,7 @@
     "\n",
     "# Generate the distance between neihbors of molecule 0 and bead 0 between the 5 \n",
     "# neighbors computed in helper.append_nbrs\n",
-    "absolute_dist = [np.linalg.norm(abs_points[0]- x) for x in abs_points[1:]]\n",
-    "\n",
-    "print(absolute_dist)"
+    "absolute_dist = [np.linalg.norm(abs_points[0]- x) for x in abs_points[1:]]\n"
    ]
   },
   {
