--- a/notebooks/TestNeighborhoodAppending.ipynb
+++ b/notebooks/TestNeighborhoodAppending.ipynb
@@ -16,6 +16,7 @@
    "source": [
     "from mpl_toolkits.mplot3d import Axes3D\n",
     "import numpy as np\n",
+    "\n",
     "# Make output reproducable\n",
     "np.random.seed(7)\n",
     "import os\n",
@@ -1775,7 +1776,7 @@
    "source": [
     "# Compare the Absolute and relative distances\n",
     "print('Absolute Distances: ' + str(absolute_dist))\n",
-    "print('Relative Distacne: ' + str(relative_dist))"
+    "print('Relative Distances: ' + str(relative_dist))"
    ]
   },
   {
